--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Base Page</title>
+</head>
+<body>
+	<p>
+		<h1>Training</h1>
+		<ul>
+			<li><a href="training/geo.html">Geo</a></li>
+		</ul>
+	</p>
+</body>
+</html>
