первый функциоанал, получем имя игрока

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<p>
 		<h1>Training</h1>
 		<ul>
-			<li><a href="training/geo.html">Geo</a></li>
+			<!--<li><a href="training/geo/geo.html">Geo</a></li>-->
+			<li><a href="game/go_game.html">Start Game</a></li>
 		</ul>
 	</p>
 </body>
