--- a/game/go_game.html
+++ b/game/go_game.html
@@ -17,14 +17,13 @@
 			</form>
 		</p>
 	</div>
-	<div id="general_section">
-		<h1>Привет, <span id="user_name"></span>!</h1>
-		<p>
-			Здесь вы сможете выбрать своего питомца<br>
-			***<br>
-			***<br>
-			***<br>
-		</p>
+	<div id="pets_finder">
+			<h1>Привет, <span id="user_name"></span>!</h1>
+			<p>Выбери себе боевого питомца</p>
+			<ul>
+				<li><img src="images/octavius.png" class="pets"></li>
+				<li><img src="images/demonius.png" class="pets"></li>
+			</ul>
 	</div>
 </body>
 </html>
