--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>Base Page</title>
+	<meta charset="utf-8">
 </head>
 <body>
 	<p>
-		<h1>Training</h1>
+		<h1>В процессе разработки</h1>
 		<ul>
 			<!--<li><a href="training/geo/geo.html">Geo</a></li>-->
 			<li><a href="game/go_game.html">Start Game</a></li>
