--- a/game/go_game.html
+++ b/game/go_game.html
@@ -10,14 +10,14 @@
 	<div id="give_me_name">
 		<h1>Добро пожаловать в игру "Боевой питомец"</h1>
 		<p>
-			Введите ваше имя
+			<h2>Введите ваше имя и нажмите кнопку</h2>
 			<form>
 				<input type="text" id='input_user_name'>
 				<input type="button" id="btn_user_name" value="Ввести!"> 
 			</form>
 		</p>
 	</div>
-	<div id="pets_finder">
+	<div id="pets_finder" class="not_visio">
 			<h1>Привет, <span id="user_name"></span>!</h1>
 			<p>Выбери себе боевого питомца</p>
 			<ul>
