--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<p>
-		<h1>В процессе разработки</h1>
+		<h1>В процессе разработки, нажми Start Game, что бы попробовать демо</h1>
 		<ul>
 			<!--<li><a href="training/geo/geo.html">Geo</a></li>-->
 			<li><a href="game/go_game.html">Start Game</a></li>
