--- a/game/go_game.html
+++ b/game/go_game.html
@@ -18,12 +18,13 @@
 		</p>
 	</div>
 	<div id="pets_finder" class="not_visio">
-			<h1>Привет, <span id="user_name"></span>!</h1>
-			<p>Выбери себе боевого питомца</p>
-			<ul>
-				<li><img src="images/octavius.png" class="pets"></li>
-				<li><img src="images/demonius.png" class="pets"></li>
-			</ul>
+		<h1>Привет, <span id="user_name"></span>!</h1>
+		<p>Выбери себе боевого питомца</p>
+		<ul>
+			<li><img src="images/octavius.png" class="pets"></li>
+			<li><img src="images/demonius.png" class="pets"></li>
+			<li><img src="images/jelly_zombie.png" class="pets"></li>
+		</ul>
 	</div>
 </body>
 </html>
