--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>Base Page</title>
@@ -8,8 +8,9 @@
 	<p>
 		<h1>В процессе разработки, нажми Start Game, что бы попробовать демо</h1>
 		<ul>
-			<!--<li><a href="training/geo/geo.html">Geo</a></li>-->
+			<li><a href="training/geo/geo.html">Geo</a></li>
 			<li><a href="game/go_game.html">Start Game</a></li>
+            <li><a href="training/app/app.html">App</a></li>
 		</ul>
 	</p>
 </body>
