--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 </head>
 <body>
+    <!--
 	<p>
 		<h1>В процессе разработки, нажми Start Game, что бы попробовать демо</h1>
 		<ul>
@@ -13,5 +14,9 @@
             <li><a href="training/app/app.html">App</a></li>
 		</ul>
 	</p>
+    -->
+    <p>
+        <a href="verstak/index.html">Ссылочка</a>
+    </p>
 </body>
 </html>
