--- a/verstak/index.html
+++ b/verstak/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Регистрация заявки</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            <div>Техподдержка</div>
+            <ul>
+                <li>Вы зарегистрированы как Петров Петр Петрович</li>
+                <li><a href="#">Персональные данные</a></li>
+                <li><a href="#">Выход</a></li>
+            </ul>
+        </div>
+        <nav class="nav navbar navbar-default" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a href="#" class="navbar-brand">Главная</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Рабочий кабинет <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Мои задания</a></li>
+                                <li><a href="#">Доступные задания</a></li>
+                                <li><a href="#">Исполняемые задания</a></li>
+                                <li><a href="#">Мои процессы</a></li>
+                                <li><a href="#">Мониторинг исполнения услуг</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <script src="jquery/jquery-2.2.0.js"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
